changed format of Barrie Ontario Stake Choir Heading.  Added address to choir memembers table.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="mainHeader" class="page-header">
     <div class="row">
       <div id="addressWrapper" class="col-xs-12 col-md-3 col-lg-3">
-        <h4 class="address">Barrie Ontario Stake Choir</h4>
+        <h3 class="address">Barrie Ontario Stake Choir</h3>
         <h6 class="address">The Church of Jesus Christ of Latter-day Saints</h6>
         <h6 class="address">79 Ferris Lane, Barrie, Ontario </h6>
         <h6 class="address">705-737-1097</h6>
@@ -93,17 +93,20 @@
           <tr>
             <th>Name</th>
             <th>Part</th>
-            <th></th>
+            <th>Phone</th>
+            <th>Address</th>
+
           </tr>
           <tr>
             <td>Cheryln Barber</td>
             <td>Soprano</td>
-            <td><a href="#">contact</a></td>
+            <td>916-716-4754</td>
+            <td> Seattle, WA. 98102</td>
           </tr>
           <tr>
             <td>Jean Barber</td>
             <td>Soprano</td>
-            <td><a href="#">contact</a></td>
+            <td><a href="#">705-435-7974</a></td>
           </tr>
         </table>
       </div>
