--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <ul class="nav navbar-nav navbar-left">
           <li><a href="#">Home</a></li>
           <li><a href="#">Performances</a></li>
+          <li><a href="#">Rehersal Schedules</a></li>
+          <li><a href="#">Performance Attire</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
