--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         <ul class="nav navbar-nav navbar-left">
           <li><a href="#">Home</a></li>
           <li><a href="#">Performances</a></li>
-          <li><a href="#">Rehersal Schedules</a></li>
+          <li><a href="#">Rehearsal Schedules</a></li>
           <li><a href="#">Performance Attire</a></li>
+          <li><a href="#">Preludes</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
@@ -82,7 +83,7 @@
             <div class="panel-heading">
               <h4>Choir Announcements</h4></div>
             <div class="panel-body">
-              no announcements at this time
+              No announcements at this time.
             </div>
           </div>
         </div>
