added Choir Members to the nav bar

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-left">
           <li><a href="#">Home</a></li>
+          <li><a href="#">Choir Members</a></li>
           <li><a href="#">Performances</a></li>
           <li><a href="#">Rehearsal Schedules</a></li>
           <li><a href="#">Performance Attire</a></li>
@@ -98,7 +99,6 @@
             <th>Part</th>
             <th>Phone</th>
             <th>Address</th>
-
           </tr>
           <tr>
             <td>Cheryln Barber</td>
@@ -109,6 +109,7 @@
           <tr>
             <td>Jean Barber</td>
             <td>Soprano</td>
+            <td><a href="#">705-435-7974</a></td>
             <td><a href="#">705-435-7974</a></td>
           </tr>
         </table>
