added accompanist to leadersip box

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div id="choirLeadership" class="col-lg-3 infoBox">
         <h5><span class="bold">Stake Music Chairman: </span><a id="chairman">Carol Smith</a></h5>
         <h5><span class="bold">Stake Choir Director: </span><a id="director">Jean Barber</a></h5>
-        <h5><span class="bold">Choir President: </span><a id="president"></a>
+        <h5><span class="bold">Stake Choir Accompanist: </span><a id="president">Carol Smith</a></h5>
         <h5><span class="bold">Music Librarian: </span> <a id="librian">Mike Dreibelbiss</a></h5>
       </div>
       <div id="leadershipDetailsWrapper" class="col-lg-3">
