added new headings to choir members list

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-10">
         <h3>Choir Members</h3>
         <table class="table table-hover">
           <tr>
@@ -99,18 +99,24 @@
             <th>Part</th>
             <th>Phone</th>
             <th>Address</th>
+            <th>Ward/Branch</th>
+            <th>E-mail</th>
           </tr>
           <tr>
             <td>Cheryln Barber</td>
             <td>Soprano</td>
             <td>916-716-4754</td>
-            <td> Seattle, WA. 98102</td>
+            <td> 215 10th Ave. E. #728, Seattle, WA. </td>
+            <td> Lake Simcoe </td>
+            <td> cherylnbarber@gmail.com </td>
           </tr>
           <tr>
             <td>Jean Barber</td>
             <td>Soprano</td>
-            <td><a href="#">705-435-7974</a></td>
-            <td><a href="#">705-435-7974</a></td>
+            <td>705-435-7974</td>
+            <td>5870 5th SR. RR#1 Egbert Ont. L0L 1N0</td>
+            <td>Lake Simcoe</td>
+            <td>ejeanbarber@gmail.com</td>
           </tr>
         </table>
       </div>
