made emails a link in the ward list

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <td>916-716-4754</td>
             <td> 215 10th Ave. E. #728, Seattle, WA. </td>
             <td> Lake Simcoe </td>
-            <td> cherylnbarber@gmail.com </td>
+            <td><a>cherylnbarber@gmail.com</a></td>
           </tr>
           <tr>
             <td>Jean Barber</td>
@@ -116,7 +116,7 @@
             <td>705-435-7974</td>
             <td>5870 5th SR. RR#1 Egbert Ont. L0L 1N0</td>
             <td>Lake Simcoe</td>
-            <td>ejeanbarber@gmail.com</td>
+            <td><a>ejeanbarber@gmail.com</a></td>
           </tr>
         </table>
       </div>
