--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <td>Cheryln Barber</td>
             <td>Soprano</td>
             <td>916-716-4754</td>
-            <td> 215 10th Ave. E. #728, Seattle, WA. </td>
+            <td> 215 10th Ave. E. #728, Seattle, WA. 98102</td>
             <td> Lake Simcoe </td>
             <td><a>cherylnbarber@gmail.com</a></td>
           </tr>
@@ -114,7 +114,7 @@
             <td>Jean Barber</td>
             <td>Soprano</td>
             <td>705-435-7974</td>
-            <td>5870 5th SR. RR#1 Egbert Ont. L0L 1N0</td>
+            <td>5870 5th SR. RR#1 Egbert, ON. L0L 1N0</td>
             <td>Lake Simcoe</td>
             <td><a>ejeanbarber@gmail.com</a></td>
           </tr>
