moved music chairman out of leadership box.  will need some more formatting but position seems to be what client wants at this time.

--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
     <!-- /.container-fluid -->
   </nav>
   <div class="container">
+    <h4>Stake Music Chairman: <a>Carol Smith</a></h4>
     <div class="row">
       <div id="choirLeadership" class="col-lg-3 infoBox">
-        <h5><span class="bold">Stake Music Chairman: </span><a id="chairman">Carol Smith</a></h5>
         <h5><span class="bold">Stake Choir Director: </span><a id="director">Jean Barber</a></h5>
         <h5><span class="bold">Stake Choir Accompanist: </span><a id="president">Carol Smith</a></h5>
-        <h5><span class="bold">Music Librarian: </span> <a id="librian">Mike Dreibelbiss</a></h5>
       </div>
       <div id="leadershipDetailsWrapper" class="col-lg-3">
         <!-- contact details get appended here -->
