--- a/index.html
+++ b/index.html
@@ -53,7 +53,23 @@
         <ul class="nav navbar-nav navbar-left">
           <li><a href="#">Home</a></li>
           <li><a href="#">Choir Members</a></li>
-          <li><a href="#">Performances</a></li>
+
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performances <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Stake Conference Feb. 11 - 12</a></li>
+              <li><a href="#">Stake Conference May. 7th</a></li>
+              <li><a href="#">Stake Conference Aug. 27th</a></li>
+              <li><a href="#">Christmas Music Devotional Dec. 10th</a></li>
+
+              <!-- <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li> -->
+            </ul>
+          </li>
+
+          <!-- <li><a href="#">Performances</a></li> -->
           <li><a href="#">Rehearsal Schedules</a></li>
           <li><a href="#">Performance Attire</a></li>
           <li><a href="#">Preludes</a></li>
