changed rehearsal schedules and Performance attire in the nav bar to drop downs.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <li><a href="#">Choir Members</a></li>
 
           <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performances <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performances <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Stake Conference Feb. 11 - 12</a></li>
+              <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
               <li><a href="#">Stake Conference May. 7th</a></li>
               <li><a href="#">Stake Conference Aug. 27th</a></li>
               <li><a href="#">Christmas Music Devotional Dec. 10th</a></li>
@@ -68,10 +68,34 @@
               <li><a href="#">One more separated link</a></li> -->
             </ul>
           </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rehearsal Schedules <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
+              <li><a href="#">Stake Conference May. 7th</a></li>
+              <li><a href="#">Stake Conference Aug. 27th</a></li>
+              <li><a href="#">Christmas Music Devotional Dec. 10th</a></li>
 
-          <!-- <li><a href="#">Performances</a></li> -->
-          <li><a href="#">Rehearsal Schedules</a></li>
-          <li><a href="#">Performance Attire</a></li>
+              <!-- <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li> -->
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performance Attire <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
+              <li><a href="#">Stake Conference May. 7th</a></li>
+              <li><a href="#">Stake Conference Aug. 27th</a></li>
+              <li><a href="#">Christmas Music Devotional Dec. 10th</a></li>
+
+              <!-- <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li> -->
+            </ul>
+          </li>
           <li><a href="#">Preludes</a></li>
         </ul>
 
