--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li><a href="#">Choir Members</a></li>
 
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performances <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performances<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
               <li><a href="#">Stake Conference May. 7th</a></li>
@@ -96,7 +96,7 @@
               <li><a href="#">One more separated link</a></li> -->
             </ul>
           </li>
-          <li><a href="#">Preludes</a></li>
+          <li><a href="#">Prelude Repertoire</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
