added details to Carol Smith link on main page.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- /.container-fluid -->
   </nav>
   <div class="container">
-    <h4>Stake Music Chairman: <a>Carol Smith</a></h4>
+    <h4>Stake Music Chairman: <a id="chairman">Carol Smith</a></h4>
     <div class="row">
       <div id="choirLeadership" class="col-lg-3 infoBox">
         <h5><span class="bold">Stake Choir Director: </span><a id="director">Jean Barber</a></h5>
