refactored code on main js page.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="row">
       <div id="choirLeadership" class="col-lg-3 infoBox">
         <h5><span class="bold">Stake Choir Director: </span><a id="director">Jean Barber</a></h5>
-        <h5><span class="bold">Stake Choir Accompanist: </span><a id="president">Carol Smith</a></h5>
+        <h5><span class="bold">Stake Choir Accompanist: </span><a id="accompanist">Carol Smith</a></h5>
       </div>
       <div id="leadershipDetailsWrapper" class="col-lg-3">
         <!-- contact details get appended here -->
