--- a/choirMembers.html
+++ b/choirMembers.html
@@ -28,7 +28,8 @@
         <h6 class="address">705-737-1097</h6>
       </div>
       <div id="quoteWrapper" class="col-lg-offset-1 col-lg-4">
-        <!-- quotes get appended here -->
+        <!-- <p>If thou art merry, praise the Lord with singing, with music, with dancing, and with a prayer of praise and thanksgiving. ~Doctrine and Covenants 136:28~</p> -->
+
       </div>
     </div>
   </div>
@@ -68,7 +69,7 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rehearsal Schedules <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rehearsal Schedules<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
               <li><a href="#">Stake Conference May. 7th</a></li>
@@ -99,33 +100,36 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-lg-4">
-        <div class="row">
-          <div class="col-lg-12">
-            <h4>Stake Music Chairman: <a id="chairman">Carol Smith</a></h4>
-          </div>
-          <div id="choirLeadership" class="col-lg-10 infoBox">
-            <h5><span class="bold">Stake Choir Director: </span><a id="director">Jean Barber</a></h5>
-            <h5><span class="bold">Stake Choir Accompanist: </span><a id="accompanist">Carol Smith</a></h5>
-          </div>
-        </div>
-      </div>
-      <div id="leadershipDetailsWrapper" class="col-lg-3">
-        <!-- contact details get appended here -->
-      </div>
-      <div class="col-lg-4 col-lg-offset-1 infoBox">
-        <div class="row">
-          <div class="panel panel-primary announcements">
-            <div class="panel-heading">
-              <h4>Choir Announcements</h4></div>
-            <div class="panel-body">
-              No announcements at this time.
-            </div>
-          </div>
-        </div>
+      <div class="col-lg-10">
+        <h3>Choir Members</h3>
+        <table class="table table-hover">
+          <tr>
+            <th>Name</th>
+            <th>Part</th>
+            <th>Phone</th>
+            <th>Address</th>
+            <th>Ward/Branch</th>
+            <th>E-mail</th>
+          </tr>
+          <tr>
+            <td>Cheryln Barber</td>
+            <td>Soprano</td>
+            <td>916-716-4754</td>
+            <td> 215 10th Ave. E. #728, Seattle, WA. 98102</td>
+            <td> Lake Simcoe </td>
+            <td><a>cherylnbarber@gmail.com</a></td>
+          </tr>
+          <tr>
+            <td>Jean Barber</td>
+            <td>Soprano</td>
+            <td>705-435-7974</td>
+            <td>5870 5th SR. RR#1 Egbert, ON. L0L 1N0</td>
+            <td>Lake Simcoe</td>
+            <td><a>ejeanbarber@gmail.com</a></td>
+          </tr>
+        </table>
       </div>
     </div>
-
 
   </div>
   <!--end container-->
