--- a/management.html
+++ b/management.html
@@ -28,7 +28,8 @@
         <h6 class="address">705-737-1097</h6>
       </div>
       <div id="quoteWrapper" class="col-lg-offset-1 col-lg-4">
-        <!-- quotes get appended here -->
+        <!-- <p>If thou art merry, praise the Lord with singing, with music, with dancing, and with a prayer of praise and thanksgiving. ~Doctrine and Covenants 136:28~</p> -->
+
       </div>
     </div>
   </div>
@@ -99,33 +100,45 @@
   </nav>
   <div class="container">
     <div class="row">
-      <div class="col-lg-4">
-        <div class="row">
-          <div class="col-lg-12">
-            <h4>Stake Music Chairman: <a id="chairman">Carol Smith</a></h4>
-          </div>
-          <div id="choirLeadership" class="col-lg-10 infoBox">
-            <h5><span class="bold">Stake Choir Director: </span><a id="director">Jean Barber</a></h5>
-            <h5><span class="bold">Stake Choir Accompanist: </span><a id="accompanist">Carol Smith</a></h5>
-          </div>
-        </div>
-      </div>
-      <div id="leadershipDetailsWrapper" class="col-lg-3">
-        <!-- contact details get appended here -->
-      </div>
-      <div class="col-lg-4 col-lg-offset-1 infoBox">
-        <div class="row">
-          <div class="panel panel-primary announcements">
-            <div class="panel-heading">
-              <h4>Choir Announcements</h4></div>
-            <div class="panel-body">
-              No announcements at this time.
+      <div class="col-lg-7 col-lg-offset-2">
+        <form class="form-horizontal">
+          <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
             </div>
+          </div>
+          <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <div class="checkbox">
+                <label>
+                  <input type="checkbox"> Remember me
+                </label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-default">Sign in</button>
+            </div>
+          </div>
+        </form>
+
+      </div>
+      <div class="col-lg-3">
+        <div class="row">
+          <div class="col-lg-12 col-lg-offset-4">
+            <a href="#">Add Choir Member</a>
           </div>
         </div>
       </div>
     </div>
-
 
   </div>
   <!--end container-->
