--- a/management.html
+++ b/management.html
@@ -178,7 +178,7 @@
                 <input type="checkbox" id="alto" value="option2"> Alto
               </label>
               <label class="checkbox-inline">
-                <input type="checkbox" id="tenor" value="option3"> tenor
+                <input type="checkbox" id="tenor" value="option3"> Tenor
               </label>
               <label class="checkbox-inline">
                 <input type="checkbox" id="Bass" value="option3"> Bass
