--- a/choirMembers.html
+++ b/choirMembers.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Tangerine:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Italianno" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
   <script defer type="text/javascript" src="./scripts/main.js"></script>
 </head>
@@ -56,6 +57,20 @@
 
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Performances<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
+              <li><a href="#">Stake Conference May. 7th</a></li>
+              <li><a href="#">Stake Conference Aug. 27th</a></li>
+              <li><a href="#">Christmas Music Devotional Dec. 10th</a></li>
+
+              <!-- <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li> -->
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Music<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
               <li><a href="#">Stake Conference May. 7th</a></li>
