--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
             </ul>
           </li>
           <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Music<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
+              <li><a href="#">Stake Conference May. 7th</a></li>
+              <li><a href="#">Stake Conference Aug. 27th</a></li>
+              <li><a href="#">Christmas Music Devotional Dec. 10th</a></li>
+
+              <!-- <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">One more separated link</a></li> -->
+            </ul>
+          </li>
+          <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rehearsal Schedules <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="#">Stake Conference Feb. 11th - 12th</a></li>
